{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 33,
  "lineage": "0ec7e516-1e78-0517-20e0-bc4ff2dfc888",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c596dcf23eb98d8",
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:instance/i-0f9c2f323ff25bde6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev--instance-profile-1",
            "id": "i-0f9c2f323ff25bde6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-044f250e5c37fcfc6",
            "private_dns": "ip-10-0-1-57.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-43-203-181-186.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.181.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-004af51fd73a5abab",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00798742340351bcd",
            "tags": {
              "Name": "dev--ec2-1"
            },
            "tags_all": {
              "Name": "dev--ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a952b1b2382ff78"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile_1",
            "aws_iam_role.ec2_role_1",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:internet-gateway/igw-0751b1a939cba56c5",
            "id": "igw-0751b1a939cba56c5",
            "owner_id": "474668402519",
            "tags": {
              "Name": "dev--igw-1"
            },
            "tags_all": {
              "Name": "dev--igw-1"
            },
            "vpc_id": "vpc-0c577c4bfa72dcea7"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:route-table/rtb-069bed3cd7fc0b280",
            "id": "rtb-069bed3cd7fc0b280",
            "owner_id": "474668402519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0751b1a939cba56c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev--rt-1"
            },
            "tags_all": {
              "Name": "dev--rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c577c4bfa72dcea7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00727e626dccc179f",
            "route_table_id": "rtb-069bed3cd7fc0b280",
            "subnet_id": "subnet-00798742340351bcd"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rt_1",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fe3f0b5bc413a36",
            "route_table_id": "rtb-069bed3cd7fc0b280",
            "subnet_id": "subnet-08a0422008b634353"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rt_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020bde2c6bf6e6d85",
            "route_table_id": "rtb-069bed3cd7fc0b280",
            "subnet_id": "subnet-0e08bd9ee0e7f5963"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rt_1",
            "aws_subnet.subnet_3",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:security-group/sg-09a952b1b2382ff78",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a952b1b2382ff78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev--sg-1",
            "name_prefix": "",
            "owner_id": "474668402519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev--sg-1"
            },
            "tags_all": {
              "Name": "dev--sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c577c4bfa72dcea7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:subnet/subnet-00798742340351bcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00798742340351bcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474668402519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev--subnet-1"
            },
            "tags_all": {
              "Name": "dev--subnet-1"
            },
            "vpc_id": "vpc-0c577c4bfa72dcea7"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:subnet/subnet-08a0422008b634353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a0422008b634353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474668402519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev--subnet-2"
            },
            "tags_all": {
              "Name": "dev--subnet-2"
            },
            "vpc_id": "vpc-0c577c4bfa72dcea7"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:subnet/subnet-0e08bd9ee0e7f5963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e08bd9ee0e7f5963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474668402519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev--subnet-3"
            },
            "tags_all": {
              "Name": "dev--subnet-3"
            },
            "vpc_id": "vpc-0c577c4bfa72dcea7"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474668402519:vpc/vpc-0c577c4bfa72dcea7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06aeaad576a354c5e",
            "default_route_table_id": "rtb-0fd6be23b7a7e6fba",
            "default_security_group_id": "sg-0c6f80ea92a9b518c",
            "dhcp_options_id": "dopt-0a639e6db7024ab08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c577c4bfa72dcea7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd6be23b7a7e6fba",
            "owner_id": "474668402519",
            "tags": {
              "Name": "dev--vpc-1"
            },
            "tags_all": {
              "Name": "dev--vpc-1"
            }
          }
        }
      ]
    }
  ]
}